chore: comprehensive code review fixes
- Improved SSRF protection in dispatcher
- Added timeout and type safety to MCP client
- Added WebSocket heartbeat and cleanup

--- a/backend/data/tasks.json
+++ b/backend/data/tasks.json
@@ -11832,5 +11832,112 @@
       "timestamp": "2026-02-06T02:49:55.359Z",
       "executionTimeMs": 788
     }
+  },
+  "6e521c87-2ac0-4b52-bc68-98eef0c3bbf1": {
+    "id": "6e521c87-2ac0-4b52-bc68-98eef0c3bbf1",
+    "prompt": "Find the top memecoin on Solana today and buy 0.1 sol of it",
+    "userId": "demo-user",
+    "status": "completed",
+    "specialist": "seeker",
+    "createdAt": "2026-02-06T02:55:53.007Z",
+    "updatedAt": "2026-02-06T02:55:56.169Z",
+    "payments": [
+      {
+        "amount": "0.0001",
+        "currency": "USDC",
+        "network": "solana",
+        "recipient": "seeker",
+        "status": "pending",
+        "timestamp": "2026-02-06T02:55:56.168Z"
+      }
+    ],
+    "messages": [
+      {
+        "id": "msg-1770346553614-zj1t",
+        "from": "dispatcher",
+        "to": "seeker",
+        "content": "Routing task: \"Find the top memecoin on Solana today and buy 0.1 sol of it...\"",
+        "timestamp": "2026-02-06T02:55:53.614Z"
+      },
+      {
+        "id": "msg-1770346553617-xbmo",
+        "from": "dispatcher",
+        "to": "seeker",
+        "content": "Checking x402 payment...",
+        "timestamp": "2026-02-06T02:55:53.617Z"
+      },
+      {
+        "id": "msg-1770346554477-9wpt",
+        "from": "dispatcher",
+        "to": "seeker",
+        "content": "Processing with seeker... (fee: 0.0001 USDC)",
+        "timestamp": "2026-02-06T02:55:54.477Z"
+      },
+      {
+        "id": "msg-1770346556038-hfdi",
+        "from": "seeker",
+        "to": "dispatcher",
+        "content": "The chart below shows the relative performance of top Solana Meme coins over time, tracking their percentage gains and losses in-terms of price across different time periods. ... WOULD 0.2% STABLE BRIAN 0.2% PASG 16.9% AUCTION 3.4% X 0.1% X FAIR 0.8% RUGPULL - COULD 5.2% BRAD 1.2% Top Solana meme coins include projects inspired by iconic tokens like Shiba Inu and new entrants that aim to capture market attention. If you're looking to invest, it's essential to understand how to buy Solana meme coins, explore the list of popular Solana meme coins, and stay updated on the current price and market trends. Speed & cost: 400 ms confirmation + <$0.01 = friction-less gambling. Cultural flywheel: Influencers (Ansem, Hsaka) post ticker → CT raids → Jupiter trending → pump.fun front-page → TikTok → repeat. Airdrop meta: Jupiter, Jito, Parcl, Kamino airdrops created “SOL rich” user-base looking for next 100×. Launchpad reflexivity: pump.fun earns fees in SOL → buys more SOL → price up → more liquidity for memes. NFT crossover: Mad Lads, Solana Monkey Business communities rotate profits into SPL memes.",
+        "timestamp": "2026-02-06T02:55:56.038Z"
+      },
+      {
+        "id": "msg-1770346556168-sdt6",
+        "from": "x402",
+        "to": "dispatcher",
+        "content": "💰 x402 Fee (Mock): 0.0001 USDC → seeker",
+        "timestamp": "2026-02-06T02:55:56.168Z"
+      }
+    ],
+    "metadata": {
+      "hiredAgents": [
+        "bankr",
+        "scribe",
+        "seeker"
+      ],
+      "wasApproved": false
+    },
+    "result": {
+      "success": true,
+      "data": {
+        "summary": "🔍 **Research: the top memecoin on Solana today and buy 0.1 sol of it**\n\n**Key Findings:**\n1. **Top Solana Meme Coins by Market Cap | CoinGecko**\n   The chart below shows the relative performance of top Solana Meme coins over time, tracking their percentage gains and losses in-terms of price across different time periods. ... WOULD 0.2% STABLE BRIAN 0.2% PASG 16.9% AUCTION 3.4% X 0.1% X FAIR 0.8% RUGPULL - COULD 5.2% BRAD 1.2%\n\n2. **Solana Meme Coins | Top Solana Meme Tokens by Market Cap**\n   Top Solana meme coins include projects inspired by iconic tokens like Shiba Inu and new entrants that aim to capture market attention. If you're looking to invest, it's essential to understand how to buy Solana meme coins, explore the list of popular Solana meme coins, and stay updated on the current price and market trends.\n\n3. **Solana Meme Coins - Top 50 List | Coinranking**\n   Speed & cost: 400 ms confirmation + <$0.01 = friction-less gambling. Cultural flywheel: Influencers (Ansem, Hsaka) post ticker → CT raids → Jupiter trending → pump.fun front-page → TikTok → repeat. Airdrop meta: Jupiter, Jito, Parcl, Kamino airdrops created “SOL rich” user-base looking for next 100×. Launchpad reflexivity: pump.fun earns fees in SOL → buys more SOL → price up → more liquidity for memes. NFT crossover: Mad Lads, Solana Monkey Business communities rotate profits into SPL memes.\n\n4. **Top Solana Meme Coins Today By Market Cap**\n   Forbes is a global media company, focusing on business, investing, technology, entrepreneurship, leadership, and lifestyle.\n\n5. **Top Solana Memecoins to Watch in 2025 | KuCoin Learn**\n   Slerf (SLERF) continues to charm the Solana memecoin community with its humorous branding and engaging storyline of a \"sluggish elf\" navigating the high-speed crypto world. Launched on June 1, 2024, by the anonymous group \"The Slerfers,\" the project has successfully leveraged its creators’ ...\n\n**Sources:**\n[1. Top Solana Meme Coins by Market Cap | CoinGecko](https://www.coingecko.com/en/categories/solana-meme-coins)\n[2. Solana Meme Coins | Top Solana Meme Tokens by Market Cap](https://www.kraken.com/categories/solana-meme)\n[3. Solana Meme Coins - Top 50 List | Coinranking](https://coinranking.com/coins/solana-meme)\n[4. Top Solana Meme Coins Today By Market Cap](https://www.forbes.com/digital-assets/categories/solana-meme-coins/)\n[5. Top Solana Memecoins to Watch in 2025 | KuCoin Learn](https://www.kucoin.com/learn/crypto/top-solana-memecoins-to-watch)\n",
+        "insight": "The chart below shows the relative performance of top Solana Meme coins over time, tracking their percentage gains and losses in-terms of price across different time periods. ... WOULD 0.2% STABLE BRIAN 0.2% PASG 16.9% AUCTION 3.4% X 0.1% X FAIR 0.8% RUGPULL - COULD 5.2% BRAD 1.2% Top Solana meme coins include projects inspired by iconic tokens like Shiba Inu and new entrants that aim to capture market attention. If you're looking to invest, it's essential to understand how to buy Solana meme coins, explore the list of popular Solana meme coins, and stay updated on the current price and market trends. Speed & cost: 400 ms confirmation + <$0.01 = friction-less gambling. Cultural flywheel: Influencers (Ansem, Hsaka) post ticker → CT raids → Jupiter trending → pump.fun front-page → TikTok → repeat. Airdrop meta: Jupiter, Jito, Parcl, Kamino airdrops created “SOL rich” user-base looking for next 100×. Launchpad reflexivity: pump.fun earns fees in SOL → buys more SOL → price up → more liquidity for memes. NFT crossover: Mad Lads, Solana Monkey Business communities rotate profits into SPL memes.",
+        "results": [
+          {
+            "title": "Top Solana Meme Coins by Market Cap | CoinGecko",
+            "url": "https://www.coingecko.com/en/categories/solana-meme-coins",
+            "description": "The chart below shows the relative performance of top Solana Meme coins over time, tracking their percentage gains and losses in-terms of price across different time periods. ... WOULD 0.2% STABLE BRIAN 0.2% PASG 16.9% AUCTION 3.4% X 0.1% X FAIR 0.8% RUGPULL - COULD 5.2% BRAD 1.2%"
+          },
+          {
+            "title": "Solana Meme Coins | Top Solana Meme Tokens by Market Cap",
+            "url": "https://www.kraken.com/categories/solana-meme",
+            "description": "Top Solana meme coins include projects inspired by iconic tokens like Shiba Inu and new entrants that aim to capture market attention. If you're looking to invest, it's essential to understand how to buy Solana meme coins, explore the list of popular Solana meme coins, and stay updated on the current price and market trends."
+          },
+          {
+            "title": "Solana Meme Coins - Top 50 List | Coinranking",
+            "url": "https://coinranking.com/coins/solana-meme",
+            "description": "Speed & cost: 400 ms confirmation + <$0.01 = friction-less gambling. Cultural flywheel: Influencers (Ansem, Hsaka) post ticker → CT raids → Jupiter trending → pump.fun front-page → TikTok → repeat. Airdrop meta: Jupiter, Jito, Parcl, Kamino airdrops created “SOL rich” user-base looking for next 100×. Launchpad reflexivity: pump.fun earns fees in SOL → buys more SOL → price up → more liquidity for memes. NFT crossover: Mad Lads, Solana Monkey Business communities rotate profits into SPL memes."
+          },
+          {
+            "title": "Top Solana Meme Coins Today By Market Cap",
+            "url": "https://www.forbes.com/digital-assets/categories/solana-meme-coins/",
+            "description": "Forbes is a global media company, focusing on business, investing, technology, entrepreneurship, leadership, and lifestyle."
+          },
+          {
+            "title": "Top Solana Memecoins to Watch in 2025 | KuCoin Learn",
+            "url": "https://www.kucoin.com/learn/crypto/top-solana-memecoins-to-watch",
+            "description": "Slerf (SLERF) continues to charm the Solana memecoin community with its humorous branding and engaging storyline of a \"sluggish elf\" navigating the high-speed crypto world. Launched on June 1, 2024, by the anonymous group \"The Slerfers,\" the project has successfully leveraged its creators’ ..."
+          }
+        ],
+        "confidence": 0.85,
+        "details": {
+          "type": "search",
+          "query": "the top memecoin on Solana today and buy 0.1 sol of it",
+          "count": 5
+        }
+      },
+      "confidence": 0.85,
+      "timestamp": "2026-02-06T02:55:56.038Z",
+      "executionTimeMs": 760
+    }
   }
 }
